[gd_scene load_steps=21 format=3 uid="uid://bobnalodod1tt"]

[ext_resource type="Script" uid="uid://b5xw2s3twqw1w" path="res://scene/level/level.gd" id="1_dcgxc"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_plauu"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="1_s8ale"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="2_plauu"]
[ext_resource type="MeshLibrary" uid="uid://cq8rryk8xq2wb" path="res://scene/level/meshlib.tres" id="5_yrl12"]
[ext_resource type="PackedScene" uid="uid://cibk4gx6wiepm" path="res://scene/vehicle/spawner.tscn" id="6_dcgxc"]
[ext_resource type="PackedScene" uid="uid://dppq8428lyr08" path="res://scene/vehicle/truck.tscn" id="7_n6afj"]
[ext_resource type="PackedScene" uid="uid://dbnqsv5qjw6bl" path="res://scene/vehicle/van.tscn" id="8_xfrsa"]
[ext_resource type="PackedScene" uid="uid://d2e46rd7koji8" path="res://scene/vehicle/sedan.tscn" id="9_yrl12"]
[ext_resource type="PackedScene" uid="uid://cnmymtpxycivs" path="res://scene/garbage/log.tscn" id="10_cqsgc"]
[ext_resource type="PackedScene" uid="uid://bde1x38efumj7" path="res://scene/garbage/log_large.tscn" id="11_gavly"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hm7p5"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_5lpb7"]
sky_material = SubResource("ProceduralSkyMaterial_hm7p5")

[sub_resource type="Environment" id="Environment_s8ale"]
background_mode = 1
background_color = Color(0.623529, 0.72549, 0.890196, 1)
sky = SubResource("Sky_5lpb7")
ambient_light_color = Color(0.623529, 0.72549, 0.890196, 1)
tonemap_mode = 2

[sub_resource type="Resource" id="Resource_dcgxc"]
script = ExtResource("2_plauu")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dmrcx"]
albedo_color = Color(0.431176, 0.000155703, 0.442421, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_1c01b"]
material = SubResource("StandardMaterial3D_dmrcx")
size = Vector2(100, 100)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_dmrcx"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_yrl12"]
plane = Plane(1, 0, 0, -30)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_cqsgc"]
plane = Plane(-1, 0, 0, -30)

[node name="Level" type="Node3D"]
script = ExtResource("1_dcgxc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_s8ale")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 1.2
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.382683, 0.92388, 0, -0.923879, 0.382683, 0, 12, 6)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("1_plauu")

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.382683, 0.92388, 0, -0.923879, 0.382683, 0, 12, 6)
script = ExtResource("1_s8ale")
tween_resource = SubResource("Resource_dcgxc")
follow_offset = Vector3(0, 6, 3)
follow_damping = true
follow_axis_lock = 2
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="FloorLimit" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="FloorLimit"]
visible = false
mesh = SubResource("PlaneMesh_1c01b")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloorLimit"]
shape = SubResource("WorldBoundaryShape3D_dmrcx")

[node name="SideLimit" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SideLimit"]
shape = SubResource("WorldBoundaryShape3D_yrl12")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SideLimit"]
shape = SubResource("WorldBoundaryShape3D_cqsgc")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("5_yrl12")
cell_size = Vector3(2, 0.2, 2)
cell_center_y = false
data = {
"cells": PackedInt32Array(65527, 65524, 1441797, 65527, 65525, 1441797, 65527, 65526, 1441797, 65527, 65527, 1441797, 65527, 65528, 1441797, 65527, 65529, 1441797, 65527, 65530, 1441795, 65527, 65531, 1048577, 65527, 65532, 1048578, 65527, 65533, 1048577, 65527, 65534, 1048578, 65527, 65535, 1048577, 65527, 0, 1441795, 65528, 65524, 1441797, 65528, 65525, 1441797, 65528, 65526, 1441797, 65528, 65527, 1441797, 65528, 65528, 1441797, 65528, 65529, 1441797, 65528, 65530, 1441795, 65528, 65531, 1048577, 65528, 65532, 1048578, 65528, 65533, 1048577, 65528, 65534, 1048578, 65528, 65535, 1048577, 65528, 0, 1441795, 65529, 65524, 1441797, 65529, 65525, 1441797, 65529, 65526, 1441797, 65529, 65527, 1441797, 65529, 65528, 1441797, 65529, 65529, 1441797, 65529, 65530, 1441795, 65529, 65531, 1048577, 65529, 65532, 1048578, 65529, 65533, 1048577, 65529, 65534, 1048578, 65529, 65535, 1048577, 65529, 0, 1441795, 65530, 65524, 1441798, 65530, 65525, 1441797, 65530, 65526, 1441797, 65530, 65527, 1441797, 65530, 65528, 1441797, 65530, 65529, 1441797, 65530, 65530, 1441795, 65530, 65531, 1048577, 65530, 65532, 1048578, 65530, 65533, 1048577, 65530, 65534, 1048578, 65530, 65535, 1048577, 65530, 0, 1441795, 65531, 65524, 1441797, 65531, 65525, 1441797, 65531, 65526, 1441797, 65531, 65527, 1441797, 65531, 65528, 1441797, 65531, 65529, 1441797, 65531, 65530, 1441795, 65531, 65531, 1048577, 65531, 65532, 1048578, 65531, 65533, 1048577, 65531, 65534, 1048578, 65531, 65535, 1048577, 65531, 0, 1441795, 65532, 65524, 1441797, 65532, 65525, 1441797, 65532, 65526, 1441797, 65532, 65527, 1441797, 65532, 65528, 1441797, 65532, 65529, 1441797, 65532, 65530, 1441795, 65532, 65531, 1048577, 65532, 65532, 1048578, 65532, 65533, 1048577, 65532, 65534, 1048578, 65532, 65535, 1048577, 65532, 0, 1441795, 65533, 65524, 1441798, 65533, 65525, 1441797, 65533, 65526, 1441797, 65533, 65527, 1441797, 65533, 65528, 1441797, 65533, 65529, 1441797, 65533, 65530, 1441795, 65533, 65531, 1048577, 65533, 65532, 1048578, 65533, 65533, 1048577, 65533, 65534, 1048578, 65533, 65535, 1048577, 65533, 0, 1441795, 65534, 65524, 1441797, 65534, 65525, 1441797, 65534, 65526, 1441797, 65534, 65527, 1441797, 65534, 65528, 1441797, 65534, 65529, 1441797, 65534, 65530, 1441795, 65534, 65531, 1048577, 65534, 65532, 1048578, 65534, 65533, 1048577, 65534, 65534, 1048578, 65534, 65535, 1048577, 65534, 0, 1441795, 65535, 65524, 1441797, 65535, 65525, 1441797, 65535, 65526, 1441797, 65535, 65527, 1441797, 65535, 65528, 1441797, 65535, 65529, 1441797, 65535, 65530, 1441795, 65535, 65531, 1048577, 65535, 65532, 1048578, 65535, 65533, 1048577, 65535, 65534, 1048578, 65535, 65535, 1048577, 65535, 0, 1441795, 0, 65524, 1441798, 0, 65525, 1441797, 0, 65526, 1441797, 0, 65527, 1441797, 0, 65528, 1441797, 0, 65529, 1441797, 0, 65530, 1441795, 0, 65531, 1048577, 0, 65532, 1048578, 0, 65533, 1048577, 0, 65534, 1048578, 0, 65535, 1048577, 0, 0, 1441795, 1, 65524, 1441797, 1, 65525, 1441797, 1, 65526, 1441797, 1, 65527, 1441797, 1, 65528, 1441797, 1, 65529, 1441797, 1, 65530, 1441795, 1, 65531, 1048577, 1, 65532, 1048578, 1, 65533, 1048577, 1, 65534, 1048578, 1, 65535, 1048577, 1, 0, 1441795, 2, 65524, 1441797, 2, 65525, 1441797, 2, 65526, 1441797, 2, 65527, 1441797, 2, 65528, 1441797, 2, 65529, 1441797, 2, 65530, 1441795, 2, 65531, 1048577, 2, 65532, 1048578, 2, 65533, 1048577, 2, 65534, 1048578, 2, 65535, 1048577, 2, 0, 1441795, 3, 65524, 1441798, 3, 65525, 1441797, 3, 65526, 1441797, 3, 65527, 1441797, 3, 65528, 1441797, 3, 65529, 1441797, 3, 65530, 1441795, 3, 65531, 1048577, 3, 65532, 1048578, 3, 65533, 1048577, 3, 65534, 1048578, 3, 65535, 1048577, 3, 0, 1441795, 4, 65524, 1441797, 4, 65525, 1441797, 4, 65526, 1441797, 4, 65527, 1441797, 4, 65528, 1441797, 4, 65529, 1441797, 4, 65530, 1441795, 4, 65531, 1048577, 4, 65532, 1048578, 4, 65533, 1048577, 4, 65534, 1048578, 4, 65535, 1048577, 4, 0, 1441795, 5, 65524, 1441797, 5, 65525, 1441797, 5, 65526, 1441797, 5, 65527, 1441797, 5, 65528, 1441797, 5, 65529, 1441797, 5, 65530, 1441795, 5, 65531, 1048577, 5, 65532, 1048578, 5, 65533, 1048577, 5, 65534, 1048578, 5, 65535, 1048577, 5, 0, 1441795, 6, 65524, 1441798, 6, 65525, 1441797, 6, 65526, 1441797, 6, 65527, 1441797, 6, 65528, 1441797, 6, 65529, 1441797, 6, 65530, 1441795, 6, 65531, 1048577, 6, 65532, 1048578, 6, 65533, 1048577, 6, 65534, 1048578, 6, 65535, 1048577, 6, 0, 1441795, 7, 65524, 1441797, 7, 65525, 1441797, 7, 65526, 1441797, 7, 65527, 1441797, 7, 65528, 1441797, 7, 65529, 1441797, 7, 65530, 1441795, 7, 65531, 1048577, 7, 65532, 1048578, 7, 65533, 1048577, 7, 65534, 1048578, 7, 65535, 1048577, 7, 0, 1441795, 8, 65524, 1441797, 8, 65525, 1441797, 8, 65526, 1441797, 8, 65527, 1441797, 8, 65528, 1441797, 8, 65529, 1441797, 8, 65530, 1441795, 8, 65531, 1048577, 8, 65532, 1048578, 8, 65533, 1048577, 8, 65534, 1048578, 8, 65535, 1048577, 8, 0, 1441795, 9, 65524, 1441797, 9, 65525, 1441797, 9, 65526, 1441797, 9, 65527, 1441797, 9, 65528, 1441797, 9, 65529, 1441797, 9, 65530, 1441795, 9, 65531, 1048577, 9, 65532, 1048578, 9, 65533, 1048577, 9, 65534, 1048578, 9, 65535, 1048577, 9, 0, 1441795)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="VehicleSpawners" type="Node3D" parent="."]

[node name="Spawner1" parent="VehicleSpawners" instance=ExtResource("6_dcgxc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -1.5)
vehicles = Array[PackedScene]([ExtResource("7_n6afj")])

[node name="Spawner2" parent="VehicleSpawners" instance=ExtResource("6_dcgxc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -5.5)
direction = Vector3(-1, 0, 0)
speed = 8.0
interval = 3.0
phase = 0.5
vehicles = Array[PackedScene]([ExtResource("8_xfrsa")])

[node name="Spawner3" parent="VehicleSpawners" instance=ExtResource("6_dcgxc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -8.5)
speed = 4.0
interval = 1.5
phase = 0.3
vehicles = Array[PackedScene]([ExtResource("9_yrl12")])

[node name="GarbageSpawners" type="Node3D" parent="."]

[node name="log" parent="GarbageSpawners" instance=ExtResource("10_cqsgc")]
transform = Transform3D(-2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 2.99787, -0.243307, -14.9803)

[node name="log_large" parent="GarbageSpawners" instance=ExtResource("11_gavly")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -5, -0.59793, -17)

[connection signal="body_entered" from="FloorLimit" to="." method="_on_floor_limit_body_entered"]
[connection signal="area_entered" from="SideLimit" to="." method="_on_side_limit_area_entered"]
